[package]
name = "ether-lastblock-time"
version = "0.1.0"
edition = "2018"



[dependencies]
actix-web = { version = "3.3.2", features = ["compress"] }
actix-rt ="2.1.0"
actix-http = "*"
actix= "0.11.1"
serde_derive ="1.0.124"
serde_json = "1.0.64"
serde = "1.0.124"
awc = "*"
hex = "*"
byteorder = "*"